Fixed title positioning from being cut off on mobile.

--- a/style.css
+++ b/style.css
@@ -44,14 +44,13 @@ body {
     max-width: 100vw;
     max-height: 100vh;
     display: grid;
-    grid-template-rows: 75px 1fr 1fr 1fr;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 100px 1fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-areas:
     ". title night"
     ". score ."
     ". results ."
     "buttons buttons buttons";
-    justify-content: center;
 }
 
 #header {
@@ -60,6 +59,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-content: center;
     padding: 0px 0px 0px 0px;
 }
 
@@ -69,20 +69,21 @@ body {
     align-self: center;
     padding: 0px;
     font-size: 69px;
-    margin: 25px 0px 0px 0px;
+    margin: 50px 0px 0px 0px;
+    max-width: 100vw;
 }
 
 #night-mode-button {
     grid-area: night;
-    justify-self: center;
-    align-self: center;
+    align-self: flex-end;
     color: black;
     background-color: gray;
     border: 3px solid black;
     width: 115px;
     height: 42px;
     font-size: 13px;
-    margin: 42px 0px 0px 0px;
+    margin: 0px 0px 0px 42px;
+    padding: 0px;
 }
 
 #score {
@@ -133,7 +134,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    max-width: 100%;
+    max-width: 100vw;
     min-height: 250px;
     margin: 0px 25px 25px 25px;
 }
